--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     />
   </head>
   <body>
-    
+    <div class="maindiv">
+        <img src="Css/avatar-jessica.jpeg">
+    </div>
   </body>
 </html>
