h1 and P have added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Template-Task</title>
     <link rel="stylesheet" href="Css/style.css" />
+    <link rel="stylesheet" href="Css/font.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,6 +16,9 @@
   <body>
     <div class="maindiv">
         <img src="Css/avatar-jessica.jpeg">
+        <h2>Jessica Randall</h2>
+        <p>London, United Kingdom</p>
+        <p>"Front end developer and avid reader."</p>
     </div>
   </body>
 </html>
