--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
         <h2>Jessica Randall</h2>
         <p>London, United Kingdom</p>
         <p>"Front end developer and avid reader."</p>
+        <a href="#" class="btn">GitHub</a>
+        <a href="#" class="btn">Frontend Mentor</a>
+        <a href="#" class="btn">Linkedin</a>
+        <a href="#" class="btn">Twitter</a>
+        <a href="#" class="btn">Instagram</a>
     </div>
   </body>
 </html>
